crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_unexpected_extra_positional.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unexpected argument: extra-arg
   ╭─[ <cli>:1:16 ]
   │
 1 │ init myproject extra-arg
   │                ────┬────  
   │                    ╰────── unexpected argument: extra-arg
───╯
